<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CDUT</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="radiobutton">校园</string>
    <string name="radiobutton_person">个人</string>
    <string name="radiobutton_navi">周边</string>
    <string name="radiobutton_shool">校园</string>
    <string name="radiobutton_news">新闻</string>
    <string name="introduction">学校概况</string>
    <string name="organization">组织机构</string>
    <string name="faculties">师资队伍</string>
    <string name="cultivation">人才培养</string>
    <string name="admission_employment">就业信息</string>
    <string name="scientific_research">科学研究</string>
    <string name="discipline_construction">学科建设</string>
    <string name="digital_campus">数字校园</string>
    <string name="campus_culture">校园文化</string>
    <string name="organization_department">党群部门</string>
    <string name="organization_party_committee_office">党委办公室</string>
    <string name="organization_discipline_inspection_office">纪委办公室监察处</string>
    <string name="organization_party_membership_committee">机关党委</string>
    <string name="organization_school_party">党委组织部 学校党校</string>
    <string name="organization_propaganda_department">党委宣传部统战部</string>
    <string name="organization_school_work">党委学生工作部</string>
    <string name="organization_mental_health">心理健康教育中心</string>
    <string name="organization_armed_forces">党委武装部</string>
    <string name="organization_school_union">校工会</string>
    <string name="organization_school_committee">校团委</string>
    <string name="organization_administration">行政部门</string>
    <string name="organization_headmaster_office">校长办公室</string>
    <string name="organization_student_affairs">学生工作处</string>
    <string name="organization_security_office">保卫处</string>
    <string name="organization_graduate_faculty">研究生部</string>
    <string name="organization_personnel_division">人事处</string>
    <string name="organization_present_plan">计划财务处</string>
    <string name="organization_acdemic_affairs">教务处</string>
    <string name="organization_sience_department">科技处</string>
    <string name="organization_editors_center">学术期刊编辑中心</string>
    <string name="organization_audit_division">审计处</string>
    <string name="organization_planing_office">发展规划处</string>
    <string name="organization_general_services">总务处</string>
    <string name="organization_lab_management">实验室与装备管理室</string>
    <string name="organization_external_cooperation">对外合作交流处</string>
    <string name="organization_campus_planning">校园规划和建设处</string>
    <string name="organization_retired_office">离退休工作办公室</string>
    <string name="organization_academic_unit">教学单位</string>
    <string name="organization_graduate_school">研究生院</string>
    <string name="organization_earth_sciences">地球科学学院</string>
    <string name="organization_energy_resources">能源学院</string>
    <string name="organization_environmental_civil_engineering">环境与土木工程学院</string>
    <string name="organization_geophysical_institute">地球物理学院</string>
    <string name="organization_nuclear_technology">核技术与自动化工程学院</string>
    <string name="organization_materials_chemical">材料与化学化工学院</string>
    <string name="organization_administrative_science">管理科学学院</string>
    <string name="organization_politics">政治学院</string>
    <string name="organization_grammar_shcool">文法学院</string>
    <string name="organization_foreign_college">外国语学院</string>
    <string name="organization_business_college">商学院</string>
    <string name="organization_institute_science_art">传播科学与艺术学院</string>
    <string name="organization_physical_education">体育学院</string>
    <string name="organization_information_science">信息科学与技术学院</string>
    <string name="organization_tourism">旅游与城乡规划学院</string>
    <string name="organization_sedimentary">沉积地质研究院</string>
    <string name="organization_continuing_education">继续教育学院</string>
    <string name="organization_leshan_engineering">乐山工程技术学院</string>
    <string name="organization_research">科研单位</string>
    <string name="organization_national_research_geological">油气藏地质开发工程国家重点实验室</string>
    <string name="organization_disaster_prevention">地质灾害防治实验室</string>
    <string name="organization_geological_survey">地质调查研究院</string>
    <string name="organization_auxiliary_department">教辅单位</string>
    <string name="organization_library">图书馆</string>
    <string name="organization_archives">档案馆</string>
    <string name="organization_museum">博物馆</string>
    <string name="organization_infirmary">校医院</string>
    <string name="organization_other_units">其他单位</string>
    <string name="organization_logistic_service_group">后勤服务集团</string>
    <string name="organization_property">资产经营有限公司</string>
    <string name="school_faculties">师资队伍</string>
    <string name="school_cultivation">人才培养</string>
    <string name="shcool_cultivation_undergraduate">本科生教育</string>
    <string name="cultivation_postgraduate">研究生教育</string>
    <string name="cultivation_specialized">专科生教育</string>
    <string name="cultivation_continuing">继续教育</string>
    <string name="cultivation_international">国际教育</string>
    <string name="admission_specialized">本专科生招生</string>
    <string name="admission_graduate">研究生招生</string>
    <string name="admission_adult_education">成教招生</string>
    <string name="admission_recruitment">自考招生</string>
    <string name="admission_international_recruitment">留学生招生</string>
    <string name="scientific_geological">地质调查研究院</string>
    <string name="scientific_reservoir">油气藏地质程实验室</string>
    <string name="scientific_geo_disaster">地质灾害防治</string>
    <string name="scientific_geo_engineering">地质工程教学中心</string>
    <string name="school_digital_library">数字图书馆</string>
    <string name="school_digital_archives">数字档案馆</string>
    <string name="school_digital_museum">数字博物馆</string>
    <string name="school_digital_financial">数字财务</string>
    <string name="school_digtial_news">新闻网</string>
    <string name="school_digital_image_network">图片网</string>
    <string name="school_campus_youth_league">团委</string>
    <string name="school_campus_post_bar">成都理工大学贴吧</string>
    <string name="school_digital_pay">交电费</string>

</resources>