<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/school_cultivation"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_admission_specialized"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/admission_specialized"
            android:textColor="@color/green"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_admission_graduate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/admission_graduate"
            android:textColor="@color/green"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_admission_adult_education"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/admission_adult_education"
            android:textColor="@color/green"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_admission_recruitment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/admission_recruitment"
            android:textColor="@color/green"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_admission_international_recruitment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/admission_international_recruitment"
            android:textColor="@color/green"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_admission_employment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/admission_employment"
            android:textColor="@color/green"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
           />
    </LinearLayout>

</LinearLayout>