<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/digital_campus"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_school_digital_library"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/school_digital_library"
            android:textColor="@color/green"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_school_digital_archives"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/school_digital_archives"
            android:textColor="@color/green"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_school_digital_museum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/school_digital_museum"
            android:textColor="@color/green"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_school_digital_financial"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/school_digital_financial"
            android:textColor="@color/green"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_school_digtial_news"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/school_digtial_news"
            android:textColor="@color/green"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_school_digital_image_network"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/school_digital_image_network"
            android:textColor="@color/green"
            android:textSize="15sp" />

        <TextView
            
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
             />

        <TextView
            
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            />
    </LinearLayout>

</LinearLayout>