<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/school_cultivation"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:textStyle="bold" />
        
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tv_shcool_cultivation_undergraduate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    android:text="@string/shcool_cultivation_undergraduate"
                    android:textColor="@color/green"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_cultivation_postgraduate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    android:text="@string/cultivation_postgraduate"
                    android:textColor="@color/green"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_cultivation_specialized"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    android:text="@string/cultivation_specialized"
                    android:textColor="@color/green"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_cultivation_continuing"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    android:text="@string/cultivation_continuing"
                    android:textColor="@color/green"
                    android:textSize="15sp" />
            </LinearLayout>
            
         <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tv_cultivation_international"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                   
                    android:gravity="left|center_vertical"
                    android:text="@string/cultivation_international"
                    android:textColor="@color/green"
                    android:textSize="15sp" />
                
                    </LinearLayout>
         
        

</LinearLayout>